--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+:root{
+  font-family: Garamond serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header, footer{
+  background-color: cornflowerblue;
+  color: whitesmoke;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li{
+  list-style: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a{
+  text-decoration: none;
+  color: whitesmoke
+}
+img{
+  width: 30vh;
+  height: 30vh;
+}
+nav ul{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
 }
-
-.App-link {
-  color: #61dafb;
+footer{
+  position: sticky;
+  bottom: 0px;
+  display: flex;
+  justify-content: space-evenly;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header{
+  position: sticky;
+  top: 0px;
+}
+.main{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  gap: 30px;
+}
+.main div{
+  border: 1px dotted #edbb63;
+  border-radius: 25%;
+  padding: 30px;
+}
+.carrito{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  gap: 30px;
+}
+.carrito li{
+  border: 1px solid #edbb63;
+  border-radius: 25%;
+  padding: 30px;
+}
+.total{
+  text-align: center;
+  border-radius: 25%;
+  background-color: #edbb63;
 }
